@@ -122,7 +122,8 @@ struct s_pocc_options
 
   // Storage compaction.
   int		storage_compaction;
-
+  int		array_contraction_keep_outer_par_loops;
+  int		array_contraction_keep_vectorized_loops;
 };
 typedef struct s_pocc_options s_pocc_options_t;
 
